Cambios mas menores de lo posible (#68)

--- a/memoria/tex/apendices/javascript-doc.tex
+++ b/memoria/tex/apendices/javascript-doc.tex
@@ -484,7 +484,7 @@ Para no alargar innecesariamente este apéndice y para que el propio lector obse
 \section{Diagrama de clases UML}
 \label{section:UML}
 
-En la imagen \ref{fig:UML} podemos ver un diagrama de clases del código recién explicado. Si se desea ver en mayor detalle en \href{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/memoria/img/UML.png}{\textcolor{blue}{este enlace}}\footnote{Disponible en la ruta \texttt{memoria/img/UML.png} del material entregado o en la URL \url{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/memoria/img/UML.png}.} puede encontrar el archivo en formato `png'.
+En la imagen \ref{fig:UML} podemos ver un diagrama de clases del código recién explicado. Si se desea ver en mayor detalle en \href{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/memoria/img/UML.png}{\textcolor{blue}{este enlace}}\footnote{Disponible en la URL \url{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/memoria/img/UML.png}.} puede encontrar el archivo en formato `png'.
 
 \begin{figure} [ht]
 \centering
