--- a/memoria/tex/titlepage.tex
+++ b/memoria/tex/titlepage.tex
@@ -29,8 +29,9 @@
 	\vspace{0.5cm}
 	%Thesis subtitle
 	{\LARGE\centering \textbf{Fundamentos matemáticos y visualización con Ray-Tracing} \par}
-	\vspace{2cm}
+	%\vspace{}
 
+	\vfill
 	\begin{table}[h!]
 			\begin{tabular}{p{0.35\textwidth}p{0.65\textwidth}}
 				{\LARGE Autor:} & {\LARGE Juan Antonio Villegas Recio} \\[1cm]
