Corrijo memoria con palabra 'lineal'

--- a/memoria/tex/apendices/instalacion.tex
+++ b/memoria/tex/apendices/instalacion.tex
@@ -21,13 +21,13 @@ cd Geometria-Fractal
   \texttt{Python}, bastaría con ejecutar el comando:
 
   \begin{lstlisting}[language=bash]
-python SimpleHTTPServer 8000 # Si se dispone de Python2
+python -m SimpleHTTPServer 8000 # Si se dispone de Python2
   \end{lstlisting}
 
   o
 
   \begin{lstlisting}[language=bash]
-python http.server 8000 # Si se dispone de Python3 (recomendado)
+python -m http.server 8000 # Si se dispone de Python3 (recomendado)
   \end{lstlisting}
   
   Tras esto, abra su navegador en la URL \url{http://localhost:8000/} y encontrará la portada de la web.
