--- a/memoria/tex/capitulos/capitulo-4.tex
+++ b/memoria/tex/capitulos/capitulo-4.tex
@@ -83,7 +83,7 @@ Nótese que la transformación lineal $x\mapsto Ax$ en $\R^2$ lleva un paralelog
 
 Nótese que en caso $\alpha=\pi,\beta=0$ se consigue una reflexión respecto al eje $Y$, y viceversa.
 
-Para aclarar todos estos conceptos en la figura \ref{fig:ejemplos-ta} podemos ver cómo actúan distintas transformaciones lineales sobre una figura simple: el polígono formado al unir los vértices $(0,0), (1,0), (1.5, 0.5), (1,1)$ y $(0,1)$. Las transformaciones lineales vienen representadas en cada caso por una sextupla $w=(r,s,\alpha,\beta,e,f)$, teniendo cada elemento el significado ya definido.
+Para aclarar todos estos conceptos en la figura \ref{fig:ejemplos-ta} podemos ver cómo actúan distintas transformaciones afines sobre una figura simple: el polígono formado al unir los vértices $(0,0), (1,0), (1.5, 0.5), (1,1)$ y $(0,1)$. Las transformaciones afines vienen representadas en cada caso por una sextupla $w=(r,s,\alpha,\beta,e,f)$, teniendo cada elemento el significado ya definido.
 
 \begin{figure}[ht]
     \centering
@@ -93,7 +93,7 @@ Para aclarar todos estos conceptos en la figura \ref{fig:ejemplos-ta} podemos ve
     \includegraphics[scale=0.6]{./img/C4/ejemplo-ta-3.png} &   \includegraphics[scale=0.75]{./img/C4/ejemplo-ta-4.png} \\
     (c) $w_3=(1,1,0,0,0.1,0.1)$ & (d) $w_4=(1,1,\pi,0,0,0)$ \\[6pt]
     \end{tabular}
-    \caption{Ejemplos de aplicaciones de transformaciones lineales}
+    \caption{Ejemplos de aplicaciones de transformaciones afines}
     \label{fig:ejemplos-ta}
   \end{figure}
 
@@ -113,11 +113,11 @@ Un último detalle para la creación de SFI es la necesidad de que las transform
     $$
 \end{definicion}
 
-Podemos utilizar como espacio métrico completo el plano euclídeo $\R^2$ y un conjunto finito de transformaciones lineales contractivas.
+Podemos utilizar como espacio métrico completo el plano euclídeo $\R^2$ y un conjunto finito de transformaciones afines contractivas.
 
 \begin{ejemplo}
     \label{ejemplo:sfi}
-    Supongamos que tenemos un triángulo equilátero $T$ cuyos vértices son los puntos $(0,0),(1,0),(\frac{1}{2},\frac{\sqrt{3}}{2})$ y las transformaciones lineales
+    Supongamos que tenemos un triángulo equilátero $T$ cuyos vértices son los puntos $(0,0),(1,0),(\frac{1}{2},\frac{\sqrt{3}}{2})$ y las transformaciones afines
     \begin{eqnarray*}
         w_1 = \left(0.5,0.5,0,0,0,0\right) \\
         w_2 = \left(0.5,0.5,0,0,\frac 1 2,0\right) \\
